Első tesztek elkészültek

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.sourcePaths": ["src", "test"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "d:\\SA\\Library\\junit5\\junit-jupiter-api-5.9.2.jar",
+        "d:\\SA\\Library\\junit5\\junit-platform-console-standalone-1.9.2.jar"
     ]
 }
